# GraphicRecipes

./: CMakeLists.txt  README.md
Source/01_Basic/: main.cpp  scenequad.cpp  scenequad.h  scenequadaliasing.cpp  scenequadaliasing.h  scenequadbresenham.cpp  scenequadbresenham.h  scenetriangle.cpp  scenetriangle.h  scenetriangletransforms.cpp  scenetriangletransforms.h
Source/01_Basic/shader/: quad.vert  quadaliasing.frag  quadbresenham.frag  quadbresenham.vert  triangle.frag  triangle.vert  triangletransforms.vert
Source/02_BasicLighting/: main.cpp
Source/Ingredients/: glad.c  scene.h  shaderprogram.cpp  shaderprogram.h
